de-linting